# DeviceManager

./: .dockerignore  .env.sample  .gitignore  .mise.toml  .pre-commit-config.yaml  LICENSE  README.commands  README.md  compose.yml  data_migration.py  manage.py  production-local.compose.yml  production.compose.yml  pyproject.toml  requirements-dev.txt  requirements-prod.txt  requirements.txt
data/: pgloader.load
devicemanager/: asgi.py  drf_permissions.py  settings.py  settings_prod.py  testrunner.py  urls.py  wsgi.py
devicemanager/admin/: admin.py  apps.py
devicemanager/fixtures/: degerees.yaml  inventory.yaml  sample_admin_user.yaml
devicemanager/inventory/: admin.py  api_views.py  apps.py  filters.py  forms.py  formsets.py  models.py  qr_code.py  serializers.py  urls.py
devicemanager/inventory/migrations/: 0001_initial.py  0002_qrcodegenerationconfig.py  0003_qrcodegenerationconfig_pdf_page_height_mm_and_more.py  0004_devicerental.py  0005_device_guardian_device_room.py  0005_rename_model_device_device_model.py  0006_alter_device_guardian_alter_device_room.py  0006_merge_20240603_1928.py  0007_remove_unique_on_inv_number_and_serial_number.py  0008_qrcodegenerationconfig_building_label_and_more.py  0009_remove_qrcodegenerationconfig_id_label.py  0010_alter_qrcodegenerationconfig_building_label_and_more.py  0011_alter_qrcodegenerationconfig_building_label_and_more.py  0012_alter_devicerental_rental_date.py  0012_alter_devicetype_name_alter_devicetype_short_name.py  0013_remove_qrcodegenerationconfig_building_label_and_more.py  0014_alter_qrcodegenerationconfig_device_model_label_and_more.py  0015_merge_20240613_2048.py  0016_rename_back_color_qrcodegenerationconfig_background_color_and_more.py  0017_rename_guardian_device_owner.py
devicemanager/inventory/tests/: test_serializers.py
devicemanager/users/: admin.py  apps.py  factories.py  forms.py  models.py  urls.py  user_preferences.py  views.py
devicemanager/users/migrations/: 0001_initial.py  0002_alter_user_name_decoration_and_more.py  0003_user_user_preferences.py
devicemanager/users/providers/authentik/: provider.py  urls.py  views.py
devicemanager/users/tests/: test_models.py
devicemanager/utils/: apps.py  fields.py  forms.py  models.py  serializers.py  units.py  widgets.py
devicemanager/utils/templates/widgets/: links_widget.html
devicemanager/utils/tests/: test_serializers.py
docker/: Dockerfile  migration-services.compose.yml  nginx.conf  static.nginx.conf
static/common/css/: jazzmin.css
templates/admin/: base.html  login.html
templatetags/: jazzmin.py
